# faculty-schedule

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Main/: main.py
Main/subfolder/: database_opener.py
database_opener/: database_opener.py
faculty_schedule/: __main__.py  frame_manager.py  frames.py
faculty_schedule/controllers/: __init__.py  base_controller.py  employee_controller.py  schedule_controller.py
faculty_schedule/exceptions/: __init__.py
faculty_schedule/models/: __init__.py  employee.py  schedule.py  schedule_slot.py
faculty_schedule/utils/: database_opener.py  generators.py
faculty_schedule/utils/frames/: __init__.py  base_frame.py  frame_manager.py
faculty_schedule/views/: __init__.py  frames.py  home_frame.py  sched_codes_frame.py  search_frame.py
faculty_schedule/views/home/: __init__.py  add_employee_frame.py  delete_employee_frame.py  edit_employee_frame.py  home_frame.py
faculty_schedule/views/sched_code/: __init__.py  add_sched_code_frame.py  delete_sched_code_frame.py  edit_sched_code_frame.py  sched_code_frame.py
faculty_schedule/views/schedules/: __init__.py  add_schedule_frame.py  delete_schedule_frame.py  edit_schedule_frame.py  schedule_frame.py  timetable_base_frame.py
